video banner fix and text align on mobile

--- a/wp-content/themes/liteSource/assets/style/blocks/_hero-header.scss
+++ b/wp-content/themes/liteSource/assets/style/blocks/_hero-header.scss
@@ -27,9 +27,11 @@
             max-width:65%;
             @include media("<=md") {
                 max-width:80%;
+                text-align: center;
             }
             @include media("<=sm") {
-                max-width:100%;
+                max-width:90%;
+                margin-left:5%;
             }
         }
         h1{
